<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="48dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/muli_extrabold"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Email_login"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:startIconTint="@color/black">
                <!--                app:startIconDrawable="@drawable/ic_person_vector"-->


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/enter_email"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Password_login"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:passwordToggleEnabled="true"



                app:startIconTint="@color/black">
                <!--                app:startIconDrawable="@drawable/ic_baseline_lock_vectorimg"-->


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/enter_password"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <CheckBox
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:minHeight="48dp"
                    android:text="@string/remember_me"

                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:backgroundTint="@color/white"
                    android:text="@string/forget_password"
                    android:textColor="@color/black" />


            </RelativeLayout>

            <Button
                android:id="@+id/Button_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/primary"
                android:fontFamily="@font/muli_extrabold"
                android:text="@string/login_as_customer"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/Button_vendor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/primary"
                android:fontFamily="@font/muli_extrabold"
                android:text="@string/login_as_vendor"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/Button_admin"
                android:background="@color/primarylight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/login_as_admin"
                android:fontFamily="@font/muli_extrabold"

                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>