<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vendor.fragments.ProfileFragmentVendor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/vendor_photo"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="36dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/vendor_profile"/>

        <TextView
            android:id="@+id/vendor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:text="Kirti college ka vadapaav"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/muli_extrabold"
            app:layout_constraintStart_toEndOf="@id/vendor_photo"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/vendor_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/vendor_photo"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:fontFamily="monospace"
            android:text="One of the famous vadapaav in whole mumbai and visited by many bollywood superstar"



            />

        <TextView
            android:id="@+id/vendor_license_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:text="@string/license_no"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vendor_info" />


        <TextView
            android:id="@+id/vendor_license_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="monospace"
            android:text="Certificate key - 8134436"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vendor_license_header" />

        <TextView
            android:id="@+id/vendor_location_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:text="@string/location"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vendor_license_info" />

        <fragment
            android:id="@+id/vendor_location_info"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vendor_location_header" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/vendor_location_info"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="96dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:text="@string/update_location"

            />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="-12dp"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="@+id/vendor_photo"
            app:layout_constraintEnd_toEndOf="@+id/vendor_photo" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>